# search-mcp

./: .dockerignore  CHANGELOG.md  Dockerfile  README.md  env.example  pyproject.toml  requirements.txt  run.sh  server.py
.circleci/: config.yml
.cursor/rules/: general.mdc
docs/: README.md  architecture.md  development.md  security.md
