[project]
name = "giantswarm-search-mcp"
version = "0.1.0"
description = "MCP server for searching Giant Swarm internal documentation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.5",
    "certifi==2025.10.5",
    "click==8.2.1",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "idna==3.10",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "markdown-it-py==4.0.0",
    "markdownify==1.2.0",
    "mcp==1.14.0",
    "mdurl==0.1.2",
    "multidict==6.6.4",
    "propcache==0.3.2",
    "pydantic==2.11.9",
    "pydantic-settings==2.10.1",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "referencing==0.36.2",
    "rich==14.1.0",
    "rpds-py==0.27.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sse-starlette==3.0.2",
    "starlette==0.48.0",
    "typer==0.17.4",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "uvicorn==0.35.0",
    "yarl==1.20.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
